remove stream() and Consumer